# django-test-repo

./: .env.example  .gitignore  LICENSE  README.md  manage.py  pyproject.toml
.github/: pull_request_template.md
custom_commands/: apps.py
custom_commands/management/commands/: add_model.py  make_custom_command.py  make_view.py  removeapp.py  set_secret_key.py  setup_crud_view.py  startapp.py
project/: asgi.py  urls.py  wsgi.py
project/settings/: base.py  dev.py  local.py  production.py
